
****  Fix MacOS portability, bug1232. [Jeff Bush]

****  Detect MSB overflow when under VL_DEBUG, bug1238. [Junyi Xi]

****  Add data types to --xml. [Rui Terra]

****  Add error when driving input-only modport, bug1110. [Trevor Elbourne]

****  Add BSSPACE and COLONPLUS lint warnings.

****  Fix false unused warning on interfaces, bug1241. [Laurens van Dam]


* Verilator 3.914 2017-10-14

**    Added new examples/ directory with appropriate examples. This replaces the
      old test_c and test_sc directories.

***   Add --getenv option for simplifying Makefiles.

***   Add --x-initial option for specifying initial value assignment behavior.

***   Add --no-relative-cfuncs and related default optimization, bug1224. [John Coiner]

***   Add /*verilator tag*/ for XML extraction applications. [Chris Randall]

****  The internal test_verilated test directory is moved to be part of test_regress.

****  The experimental VL_THREADED setting (only, not normal mode) now requires C++11.

****  Fix over-aggressive inlining, bug1223. [John Coiner]

****  Fix Ubuntu 17.10 issues, bug1223 partial. [John Coiner]

****  Fix compiler warning when WIDTH warning ignored on large compare.

****  Fix memory leak in VerilatedVcd dumps, bug1222 partial. [Shareef Jalloq]

****  Fix unnecessary Vdly variables, bug1224 partial. [John Coiner]

****  Fix conditional slices and add related optimizations.

****  Fix `` expansion of `defines, bug1225, bug1227, bug1228. [Odd Magne Reitan]

****  Fix -E duplicating output, bug1226. [Odd Magne Reitan]

****  Fix float-conversion warning, bug1229. [Robert Henry]

****  Fix MacOS portability, bug1230, bug1231. [Jeff Bush]


* Verilator 3.912 2017-09-23

**    Verilated headers no longer "use namespace std;"
      User's code without "std::" prefixes may need "use namespace std;" to compile.

***   Support or/and/xor array intrinsic methods, bug1210. [Mike Popoloski]

***   Support package export, bug1217. [Usuario Eda]
