@@ -20,6 +20,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix false unused warning on interfaces, bug1241. [Laurens van Dam]
 
+****  Fix error on "unique case" with no cases.
+
 
 * Verilator 3.914 2017-10-14
 
